# prog-defensive-py

./: .gitignore  conftest.py  defensive_programming_live_coding_guide.md  guideline.md  pyproject.toml
LiveCoding/module_01_never_trust_input/: module_01_never_trust_input.md
LiveCoding/module_01_never_trust_input/1.quick_first_view/: conclusion.md
LiveCoding/module_01_never_trust_input/2.dataclass_post_init/: conclusion.md  solution_dataclass.py  test_solution.py
LiveCoding/module_01_never_trust_input/3.result_stronger_types/: TestParseUserInputPBT.py  conclusion.md  mypy.module01.ini  pyright.module01.json  solution_stronger_types.py  test_solution.py
LiveCoding/module_01_never_trust_input/4.more_FP_style/: conclusion.md  pyright.more_fp_style.json  solution_more_fp_style.py  test_more_fp_style_pbt.py  test_solution_more_fp_style.py
LiveCoding/module_02_fail_fast_ROR/: module_02_fail_fast_explicitly.md
LiveCoding/module_02_fail_fast_ROR/4.hand_rolled_result/: TestBalanceLookupPBT.py  conclusion.md  mypy.hand_rolled.ini  pyright.hand_rolled.json  solution_hand_rolled_result.py  test_solution.py
LiveCoding/module_02_fail_fast_ROR/5.railway_oriented/: conclusion.md  (+5 more)
LiveCoding/module_04_ext_dep/: module_04_external_dependencies (1).md  solution_external_dependencies.py  test_solution_external_dependencies.py
LiveCoding/module_04_ext_deper_in_defects/: dtos.py  faulty_stripe_transport.py  http_stripe_api.py  result.py  test_http_stripe_fault_injection.py
exercises/module_01_never_trust_input/: module_01_never_trust_input.md  solution.py  test_solution.py
(+36 files in other folders)
