[tool.poetry]
name = "defensive-prog-in-py"
version = "0.1.0"
description = "Defensive programming live coding and exercises in Python"
authors = ["Guillaume"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"

[tool.pytest.ini_options]
addopts = "--tb=short -q --import-mode=importlib"
testpaths = ["exercises"]

[tool.hypothesis]
max_examples = 200

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
